# ros2mcp

./: .gitignore  README.md  pixi.toml
assets/: waypoints.json
src/mcp_demo_client/: package.xml  setup.cfg  setup.py
src/mcp_demo_client/mcp_demo_client/: client.py
src/mcp_demo_interfaces/: CMakeLists.txt  package.xml
src/mcp_demo_interfaces/msg/: Waypoint.msg
src/mcp_demo_interfaces/srv/: Nav2Waypoint.srv
src/mcp_demo_msgs/: CMakeLists.txt  package.xml
src/mcp_demo_msgs/srv/: CreateWaypoint.srv
src/mcp_demo_node/: package.xml  setup.cfg  setup.py
src/mcp_demo_node/launch/: tb4.launch.py
src/mcp_demo_node/mcp_demo_node/: mcp_demo_node.py  waypoint.py
src/mcp_server/: README.md  package.xml  setup.cfg  setup.py
src/mcp_server/doc/: conf.py  index.rst  readme_include.md
src/mcp_server/mcp_server/: filter.py  mcp_server.py
src/mcp_server/mcp_server/message/: __init__.py  content.py  empty.py  image.py  message.py  text.py
src/mcp_server/mcp_server/subject/: resource.py  schema.py  service.py  subject.py  tool.py  topic.py
