<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcp_server</name>
  <version>0.0.0</version>
  <description>ROS2 MCP Server</description>
  <maintainer email="info@gres.io">Nicolas Gres</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>python3-mcp-pip</depend>
  <depend>python3-uvicorn</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
